--- a/src/bom-tools-library/bom-tools.fsproj
+++ b/src/bom-tools-library/bom-tools.fsproj
@@ -5,6 +5,7 @@
     <RootNamespace>bom_tools</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ArrayExtensions.fs" />
     <Compile Include="SpreadSheetML.Helpers.fs" />
     <Compile Include="DTO.fs" />
     <Compile Include="Domain\Note.fs" />
@@ -15,6 +16,7 @@
     <Compile Include="Import.fs" />
     <Compile Include="NotesToExcel.fs" />
     <Compile Include="AdjustLoads.fs" />
+    <Compile Include="SeismicSeperator.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
