Additional loads to CB, all load referened from L-BL, some error handling added

--- a/src/bom-tools.fsproj
+++ b/src/bom-tools.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="NMBS\SeismicSeperator.fs" />
     <Compile Include="Nucor\ImportDTOs.fs" />
     <Compile Include="Nucor\Import.fs" />
+    <Compile Include="Nucor\NmbsBom.fs" />
     <Compile Include="Sei\SeiImport.fs" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
